# c_linux_abstraction

./: CMakeLists.txt  README.md  main.c
examples/: CMakeLists.txt  gl_xcb_window.c  gl_xlib_window.c  main.c  simple_window.c
include/: CMakeLists.txt  lal_defines.h  lal_error_list.h
include/lal/: CMakeLists.txt  lal_input.h  lal_window.h
src/: CMakeLists.txt  lal_input.c  lal_window.c
